--- a/examples/list_devices/index.html
+++ b/examples/list_devices/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
     <title>WebMIDIAPIShim 2</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="../../browser/build.min.js"></script>
+    <script src="../../build/WebMIDIAPI.min.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="../../gh-page/styles/reset.css">
     <link rel="stylesheet" type="text/css" href="../../gh-page/styles/prism.css">
