--- a/examples/routing_1/index.html
+++ b/examples/routing_1/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>WebMIDIAPIShim</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="../../browser/WebMIDIAPI.js"></script>
+    <script src="../../build/WebMIDIAPI.min.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" type="text/css" href="../../gh-oage/styles/reset.css">
     <link rel="stylesheet" type="text/css" href="../../gh-page/styles/prism.css">
